syntax = "proto3";

package yapper;
option go_package = "asdf/yapper";

service YapperService {
  rpc Yap (YapRequest) returns (stream YapReply);
}

message YapRequest {
  string message = 1;
}

message YapReply {
  string reply = 1;
}
